[package]
name = "ip-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primes = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.199", features = ["derive"] }
serde_bytes = "0.11.14"
serde_cbor = "0.11.2"
