[package]
name = "ip-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.5"
num-integer = "0.1.46"
num-primes = "0.3.0"
num-traits = "0.2.19"
rand = "0.8.5"
serde = { version = "1.0.199", features = ["derive"] }
serde_bytes = "0.11.14"
serde_json = "1.0.117"
